fixed an overflow of a video

--- a/css/style.css
+++ b/css/style.css
@@ -248,6 +248,7 @@ img {
 .tv {
   position: relative;
   max-width: 550px;
+  overflow: hidden;
 }
 
 .video {
@@ -494,7 +495,9 @@ img {
     font-size: 1rem;
   }
   /* Cards */
-
+  .slideshow {
+    padding: 0.5rem 0;
+  }
   .slideshow .grid {
     grid-template-columns: repeat(2, 1fr);
     gap: 2rem;
